style: fix form from overflow

--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,8 @@ section {
 }
 
 .hero_container {
+  display: flex;
+  flex-direction: column;
   width: 100vw;
   height: 1000px;
   background-color: white;
@@ -145,9 +147,10 @@ section {
 }
 
 .form_link_list_container {
-  padding: 0 1em;
   margin-top: -11em;
   margin-bottom: 6em;
+  margin: -11em auto 6em auto;
+  width: 90%;
 }
 
 .statistics_section {
